nova_tests/negative_capability/folder_inconsistent_decl/beta.nv
// EXPECT_COMPILE_ERROR module declaration does not match file path
//
// Plan 42.17 Ф.7: standalone файл в папке folder_inconsistent_decl/
// объявляет намеренно неверный module path → D78 E_D78_MODULE_PATH_MISMATCH.
// Ожидается rev-3 `folder_inconsistent_decl.beta`, объявлено `wrong.beta`.

module wrong.beta

export fn beta_fn() -> int =>
    2
